--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
-    "mongodb": "^4.5.0"
+    "mongodb": "^4.5.0",
+    "vue": "^3.2.33"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
